[TreeDictionary] Adjust combining API
Spin off two separate combining behaviors for values that are present
in both dictionaries, based on whether or not the values are equal.

Before this change, unequal values were always merged, which
isn’t necessarily what we want.

--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/HashTreeCollections.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/HashTreeCollections.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "HashTreeCollectionsTests"
+               BuildableName = "HashTreeCollectionsTests"
+               BlueprintName = "HashTreeCollectionsTests"
+               ReferencedContainer = "container:..">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
