HashTreeCollections: Qualify internal type names with “Hash”
This makes them unique throughout the package, allowing this code to be built as a single, huge module.

--- a/Sources/HashTreeCollections/CMakeLists.txt
+++ b/Sources/HashTreeCollections/CMakeLists.txt
@@ -8,45 +8,45 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(HashTreeCollections
-  "Node/_AncestorSlots.swift"
-  "Node/_Bitmap.swift"
-  "Node/_Bucket.swift"
-  "Node/_Hash.swift"
-  "Node/_HashTreeIterator.swift"
-  "Node/_HashTreeStatistics.swift"
-  "Node/_Level.swift"
-  "Node/_Node+Builder.swift"
-  "Node/_Node+Debugging.swift"
-  "Node/_Node+Initializers.swift"
-  "Node/_Node+Invariants.swift"
-  "Node/_Node+Lookups.swift"
-  "Node/_Node+Primitive Insertions.swift"
-  "Node/_Node+Primitive Removals.swift"
-  "Node/_Node+Primitive Replacement.swift"
-  "Node/_Node+Storage.swift"
-  "Node/_Node+Structural compactMapValues.swift"
-  "Node/_Node+Structural filter.swift"
-  "Node/_Node+Structural intersection.swift"
-  "Node/_Node+Structural isDisjoint.swift"
-  "Node/_Node+Structural isEqualSet.swift"
-  "Node/_Node+Structural isSubset.swift"
-  "Node/_Node+Structural mapValues.swift"
-  "Node/_Node+Structural merge.swift"
-  "Node/_Node+Structural subtracting.swift"
-  "Node/_Node+Structural symmetricDifference.swift"
-  "Node/_Node+Structural union.swift"
-  "Node/_Node+Subtree Insertions.swift"
-  "Node/_Node+Subtree Modify.swift"
-  "Node/_Node+Subtree Removals.swift"
-  "Node/_Node+UnsafeHandle.swift"
-  "Node/_Node.swift"
-  "Node/_RawNode+UnsafeHandle.swift"
-  "Node/_RawNode.swift"
-  "Node/_Slot.swift"
-  "Node/_Stack.swift"
-  "Node/_StorageHeader.swift"
-  "Node/_UnmanagedNode.swift"
-  "Node/_UnsafePath.swift"
+  "HashNode/_AncestorHashSlots.swift"
+  "HashNode/_Bitmap.swift"
+  "HashNode/_Bucket.swift"
+  "HashNode/_Hash.swift"
+  "HashNode/_HashTreeIterator.swift"
+  "HashNode/_HashTreeStatistics.swift"
+  "HashNode/_HashLevel.swift"
+  "HashNode/_HashNode+Builder.swift"
+  "HashNode/_HashNode+Debugging.swift"
+  "HashNode/_HashNode+Initializers.swift"
+  "HashNode/_HashNode+Invariants.swift"
+  "HashNode/_HashNode+Lookups.swift"
+  "HashNode/_HashNode+Primitive Insertions.swift"
+  "HashNode/_HashNode+Primitive Removals.swift"
+  "HashNode/_HashNode+Primitive Replacement.swift"
+  "HashNode/_HashNode+Storage.swift"
+  "HashNode/_HashNode+Structural compactMapValues.swift"
+  "HashNode/_HashNode+Structural filter.swift"
+  "HashNode/_HashNode+Structural intersection.swift"
+  "HashNode/_HashNode+Structural isDisjoint.swift"
+  "HashNode/_HashNode+Structural isEqualSet.swift"
+  "HashNode/_HashNode+Structural isSubset.swift"
+  "HashNode/_HashNode+Structural mapValues.swift"
+  "HashNode/_HashNode+Structural merge.swift"
+  "HashNode/_HashNode+Structural subtracting.swift"
+  "HashNode/_HashNode+Structural symmetricDifference.swift"
+  "HashNode/_HashNode+Structural union.swift"
+  "HashNode/_HashNode+Subtree Insertions.swift"
+  "HashNode/_HashNode+Subtree Modify.swift"
+  "HashNode/_HashNode+Subtree Removals.swift"
+  "HashNode/_HashNode+UnsafeHandle.swift"
+  "HashNode/_HashNode.swift"
+  "HashNode/_RawHashNode+UnsafeHandle.swift"
+  "HashNode/_RawHashNode.swift"
+  "HashNode/_HashSlot.swift"
+  "HashNode/_HashStack.swift"
+  "HashNode/_HashNodeHeader.swift"
+  "HashNode/_UnmanagedHashNode.swift"
+  "HashNode/_UnsafePath.swift"
   "TreeDictionary/TreeDictionary+Codable.swift"
   "TreeDictionary/TreeDictionary+Collection.swift"
   "TreeDictionary/TreeDictionary+CustomReflectable.swift"
