HeapModule: _Node → _HeapNode
This makes this name unique throughout the package, allowing this code to be built as a single, huge module.

--- a/Sources/HeapModule/CMakeLists.txt
+++ b/Sources/HeapModule/CMakeLists.txt
@@ -8,7 +8,7 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(HeapModule
-  "_Node.swift"
+  "_HeapNode.swift"
   "Heap.swift"
   "Heap+Descriptions.swift"
   "Heap+ExpressibleByArrayLiteral.swift"
