Move build settings from Xcode project into xcconfig files

--- a/Xcode/Shared.xcconfig
+++ b/Xcode/Shared.xcconfig
@@ -15,7 +15,7 @@ SWIFT_VERSION = 5.5
 ONLY_ACTIVE_ARCH[config=Debug] = YES
 
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) COLLECTIONS_SINGLE_MODULE
-SWIFT_ACTIVE_COMPILATION_CONDITIONS[config=Debug] = $(inherited) COLLECTIONS_INTERNAL_CHECKS
+SWIFT_ACTIVE_COMPILATION_CONDITIONS[config=Debug] = $(inherited) COLLECTIONS_INTERNAL_CHECKS DEBUG
 
 SWIFT_COMPILATION_MODE[config=Release] = wholemodule
 SWIFT_COMPILATION_MODE[config=Debug] = singlefile
