--- a/Xcode/Collections.xcconfig
+++ b/Xcode/Collections.xcconfig
@@ -15,8 +15,32 @@ PRODUCT_BUNDLE_IDENTIFIER = org.swift.Collections
 SUPPORTED_PLATFORMS = macosx iphoneos iphonesimulator watchos watchsimulator appletvos appletvsimulator
 ARCHS = $(ARCHS_STANDARD)
 
-DEFINES_MODULE = YES
+MACOSX_DEPLOYMENT_TARGET = 12.0
+IPHONEOS_DEPLOYMENT_TARGET = 15.0
+WATCHOS_DEPLOYMENT_TARGET = 8.0
+TVOS_DEPLOYMENT_TARGET = 15.0
+
+MARKETING_VERSION = 1.1
+
+CURRENT_PROJECT_VERSION = 1
+VERSIONING_SYSTEM = apple-generic
+VERSION_INFO_PREFIX =
+
+DYLIB_COMPATIBILITY_VERSION = $(CURRENT_PROJECT_VERSION)
+DYLIB_CURRENT_VERSION = $(CURRENT_PROJECT_VERSION)
+
+INSTALL_PATH = $(LOCAL_LIBRARY_DIR)/Frameworks
+SKIP_INSTALL = YES
+DYLIB_INSTALL_NAME_BASE = @rpath
+LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks @loader_path/Frameworks
 
 ENABLE_TESTABILITY = NO
+ENABLE_TESTABILITY[config=Debug] = YES
 
+GENERATE_INFOPLIST_FILE = YES
+CODE_SIGN_STYLE = Automatic
 
+DEFINES_MODULE = YES
+ENABLE_MODULE_VERIFIER = YES
+MODULE_VERIFIER_SUPPORTED_LANGUAGES = objective-c objective-c++
+MODULE_VERIFIER_SUPPORTED_LANGUAGE_STANDARDS = gnu11 gnu++20
