--- a/Xcode/CollectionsTests.xcconfig
+++ b/Xcode/CollectionsTests.xcconfig
@@ -15,6 +15,14 @@ PRODUCT_BUNDLE_IDENTIFIER = org.swift.CollectionsTests
 SUPPORTED_PLATFORMS = macosx iphoneos iphonesimulator watchos watchsimulator appletvos appletvsimulator
 ARCHS = $(ARCHS_STANDARD)
 
+MACOSX_DEPLOYMENT_TARGET = 12.0
+IPHONEOS_DEPLOYMENT_TARGET = 15.0
+WATCHOS_DEPLOYMENT_TARGET = 8.0
+TVOS_DEPLOYMENT_TARGET = 15.0
+
+CURRENT_PROJECT_VERSION = 1
+MARKETING_VERSION = 1.0
+
 GENERATE_INFOPLIST_FILE = YES
 CODE_SIGN_STYLE = Automatic
 
