[Xcode] Enable randomized testing

--- a/Xcode/CollectionsTests.xcconfig
+++ b/Xcode/CollectionsTests.xcconfig
@@ -28,3 +28,4 @@ CODE_SIGN_STYLE = Automatic
 
 ENABLE_TESTABILITY = NO
 
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) COLLECTIONS_RANDOMIZED_TESTING
