[Xcode] Set a code sign identity (so that we default to ad-hoc signatures)

--- a/Xcode/Collections.xcconfig
+++ b/Xcode/Collections.xcconfig
@@ -38,4 +38,6 @@ ENABLE_TESTABILITY = NO
 ENABLE_TESTABILITY[config=Debug] = YES
 
 GENERATE_INFOPLIST_FILE = YES
+
 CODE_SIGN_STYLE = Automatic
+CODE_SIGN_IDENTITY = -
