--- a/Xcode/CollectionsTests.xcconfig
+++ b/Xcode/CollectionsTests.xcconfig
@@ -24,7 +24,9 @@ CURRENT_PROJECT_VERSION = 1
 MARKETING_VERSION = 1.0
 
 GENERATE_INFOPLIST_FILE = YES
+
 CODE_SIGN_STYLE = Automatic
+CODE_SIGN_IDENTITY = -
 
 ENABLE_TESTABILITY = NO
 
