Move ARTree into separate submodule

--- a/Sources/ARTreeModule/CMakeLists.txt
+++ b/Sources/ARTreeModule/CMakeLists.txt
@@ -8,32 +8,32 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(ARTreeModule
-  "ArtNode.swift"
-  "ARTree+insert.swift"
-  "ARTree.swift"
-  "FixedArray+impl.swift"
-  "FixedSizedArray.swift"
-  "Node+StringConverter.swift"
-  "Node16.swift"
-  "NodeHeader.swift"
-  "RawNode.swift"
-  "ARTree+delete.swift"
-  "ARTree+Sequence.swift"
-  "CMakeLists.txt"
-  "FixedArray+Storage.swift"
-  "InternalNode.swift"
-  "Node+UnmanagedStorage.swift"
-  "Node48.swift"
-  "NodeLeaf.swift"
-  "Utils.swift"
-  "ARTree+get.swift"
-  "ARTree+utils.swift"
-  "Consts and Specs.swift"
-  "FixedArray.swift"
-  "Node+Storage.swif"
-  "Node4.swift"
-  "Node256.swift"
-  "NodeType.swift"
+  "ARTree/ArtNode.swift"
+  "ARTree/ARTree+insert.swift"
+  "ARTree/ARTree.swift"
+  "ARTree/FixedArray+impl.swift"
+  "ARTree/FixedSizedArray.swift"
+  "ARTree/Node+StringConverter.swift"
+  "ARTree/Node16.swift"
+  "ARTree/NodeHeader.swift"
+  "ARTree/RawNode.swift"
+  "ARTree/ARTree+delete.swift"
+  "ARTree/ARTree+Sequence.swift"
+  "ARTree/CMakeLists.txt"
+  "ARTree/FixedArray+Storage.swift"
+  "ARTree/InternalNode.swift"
+  "ARTree/Node+UnmanagedStorage.swift"
+  "ARTree/Node48.swift"
+  "ARTree/NodeLeaf.swift"
+  "ARTree/Utils.swift"
+  "ARTree/ARTree+get.swift"
+  "ARTree/ARTree+utils.swift"
+  "ARTree/Consts and Specs.swift"
+  "ARTree/FixedArray.swift"
+  "ARTree/Node+Storage.swif"
+  "ARTree/Node4.swift"
+  "ARTree/Node256.swift"
+  "ARTree/NodeType.swift"
 )
 target_link_libraries(ARTreeModule PRIVATE
   _CollectionsUtilities)
