Remove old FixedArray implementation

--- a/Sources/ARTreeModule/CMakeLists.txt
+++ b/Sources/ARTreeModule/CMakeLists.txt
@@ -8,32 +8,31 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(ARTreeModule
-  "ARTree/ArtNode.swift"
+  "ARTree/ARTree+Sequence.swift"
+  "ARTree/ARTree+delete.swift"
+  "ARTree/ARTree+get.swift"
   "ARTree/ARTree+insert.swift"
   "ARTree/ARTree.swift"
+  "ARTree/ArtNode.swift"
+  "ARTree/CMakeLists.txt"
+  "ARTree/Consts and Specs.swift"
+  "ARTree/FixedArray+Storage.swift"
+  "ARTree/FixedArray+Utils.swift"
   "ARTree/FixedArray+impl.swift"
-  "ARTree/FixedSizedArray.swift"
+  "ARTree/FixedArray.swift"
+  "ARTree/InternalNode.swift"
   "ARTree/Node+StringConverter.swift"
   "ARTree/Node16.swift"
-  "ARTree/NodeHeader.swift"
-  "ARTree/RawNode.swift"
-  "ARTree/ARTree+delete.swift"
-  "ARTree/ARTree+Sequence.swift"
-  "ARTree/CMakeLists.txt"
-  "ARTree/FixedArray+Storage.swift"
-  "ARTree/InternalNode.swift"
-  "ARTree/Node+UnmanagedStorage.swift"
-  "ARTree/Node48.swift"
-  "ARTree/NodeLeaf.swift"
-  "ARTree/Utils.swift"
-  "ARTree/ARTree+get.swift"
-  "ARTree/ARTree+utils.swift"
-  "ARTree/Consts and Specs.swift"
-  "ARTree/FixedArray.swift"
-  "ARTree/Node+Storage.swif"
-  "ARTree/Node4.swift"
   "ARTree/Node256.swift"
+  "ARTree/Node4.swift"
+  "ARTree/Node48.swift"
+  "ARTree/NodeHeader.swift"
+  "ARTree/NodeLeaf.swift"
+  "ARTree/NodeStorage.swif"
   "ARTree/NodeType.swift"
+  "ARTree/RawNode.swift"
+  "ARTree/UnmanagedNodeStorage.swift"
+  "ARTree/Utils.swift"
 )
 target_link_libraries(ARTreeModule PRIVATE
   _CollectionsUtilities)
