--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,7 +1,7 @@
 #[[
 This source file is part of the Swift Collections Open Source Project
 
-Copyright (c) 2021-2022 Apple Inc. and the Swift project authors
+Copyright (c) 2021 - 2023 Apple Inc. and the Swift project authors
 Licensed under Apache License v2.0 with Runtime Library Exception
 
 See https://swift.org/LICENSE.txt for license information
@@ -10,7 +10,8 @@ See https://swift.org/LICENSE.txt for license information
 add_subdirectory(BitCollections)
 add_subdirectory(Collections)
 add_subdirectory(DequeModule)
+add_subdirectory(HashTreeCollections)
 add_subdirectory(HeapModule)
 add_subdirectory(OrderedCollections)
-add_subdirectory(HashTreeCollections)
+add_subdirectory(RopeModule)
 add_subdirectory(_CollectionsUtilities)
