--- a/Xcode/Shared.xcconfig
+++ b/Xcode/Shared.xcconfig
@@ -23,9 +23,12 @@ SWIFT_COMPILATION_MODE[config=Debug] = singlefile
 SWIFT_OPTIMIZATION_LEVEL[config=Release] = -O
 SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone
 
+ENABLE_USER_SCRIPT_SANDBOXING = YES
+
 SWIFT_EMIT_LOC_STRINGS = NO
 SWIFT_INSTALL_OBJC_HEADER = NO
 
+DEAD_CODE_STRIPPING = YES
 COPY_PHASE_STRIP = NO
 
 DEBUG_INFORMATION_FORMAT[config=Release] = dwarf-with-dsym
