--- a/Sources/OrderedCollections/CMakeLists.txt
+++ b/Sources/OrderedCollections/CMakeLists.txt
@@ -7,7 +7,7 @@ Licensed under Apache License v2.0 with Runtime Library Exception
 See https://swift.org/LICENSE.txt for license information
 #]]
 
-add_library(OrderedCollections
+list(APPEND COLLECTIONS_ORDERED_SOURCES
   "HashTable/_HashTable.swift"
   "HashTable/_HashTable+Bucket.swift"
   "HashTable/_HashTable+BucketIterator.swift"
@@ -71,10 +71,16 @@ add_library(OrderedCollections
   "OrderedSet/OrderedSet.swift"
   "Utilities/_UnsafeBitset.swift"
   )
-target_link_libraries(OrderedCollections PRIVATE
-  InternalCollectionsUtilities)
-set_target_properties(OrderedCollections PROPERTIES
-  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+set_property(GLOBAL APPEND PROPERTY COLLECTIONS_ORDERED_SOURCES ${COLLECTIONS_ORDERED_SOURCES})
 
-_install_target(OrderedCollections)
-set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS OrderedCollections)
+if(NOT COLLECTIONS_SINGLE_MODULE)
+  add_library(OrderedCollections
+    ${COLLECTIONS_ORDERED_SOURCES})
+  target_link_libraries(OrderedCollections PRIVATE
+    InternalCollectionsUtilities)
+  set_target_properties(OrderedCollections PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+
+  _install_target(OrderedCollections)
+  set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS OrderedCollections)
+endif()
