--- a/Sources/HashTreeCollections/CMakeLists.txt
+++ b/Sources/HashTreeCollections/CMakeLists.txt
@@ -7,7 +7,7 @@ Licensed under Apache License v2.0 with Runtime Library Exception
 See https://swift.org/LICENSE.txt for license information
 #]]
 
-add_library(HashTreeCollections
+list(APPEND COLLECTIONS_HASHTREE_SOURCES
   "HashNode/_AncestorHashSlots.swift"
   "HashNode/_Bitmap.swift"
   "HashNode/_Bucket.swift"
@@ -94,10 +94,16 @@ add_library(HashTreeCollections
   "TreeSet/TreeSet+SetAlgebra union.swift"
   "TreeSet/TreeSet.swift"
   )
-target_link_libraries(HashTreeCollections PRIVATE
-  InternalCollectionsUtilities)
-set_target_properties(HashTreeCollections PROPERTIES
-  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+set_property(GLOBAL APPEND PROPERTY COLLECTIONS_HASHTREE_SOURCES ${COLLECTIONS_HASHTREE_SOURCES})
 
-_install_target(HashTreeCollections)
-set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HashTreeCollections)
+if(NOT COLLECTIONS_SINGLE_MODULE)
+  add_library(HashTreeCollections
+    ${COLLECTIONS_HASHTREE_SOURCES})
+  target_link_libraries(HashTreeCollections PRIVATE
+    InternalCollectionsUtilities)
+  set_target_properties(HashTreeCollections PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+
+  _install_target(HashTreeCollections)
+  set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HashTreeCollections)
+endif()
