--- a/Sources/HeapModule/CMakeLists.txt
+++ b/Sources/HeapModule/CMakeLists.txt
@@ -7,17 +7,23 @@ Licensed under Apache License v2.0 with Runtime Library Exception
 See https://swift.org/LICENSE.txt for license information
 #]]
 
-add_library(HeapModule
+list(APPEND COLLECTIONS_HEAP_SOURCES
   "_HeapNode.swift"
   "Heap.swift"
   "Heap+Descriptions.swift"
   "Heap+ExpressibleByArrayLiteral.swift"
   "Heap+Invariants.swift"
   "Heap+UnsafeHandle.swift")
-target_link_libraries(HeapModule PRIVATE
-  InternalCollectionsUtilities)
-set_target_properties(HeapModule PROPERTIES
-  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+set_property(GLOBAL APPEND PROPERTY COLLECTIONS_HEAP_SOURCES ${COLLECTIONS_HEAP_SOURCES})
 
-_install_target(HeapModule)
-set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HeapModule)
+if(NOT COLLECTIONS_SINGLE_MODULE)
+  add_library(HeapModule
+    ${COLLECTIONS_HEAP_SOURCES})
+  target_link_libraries(HeapModule PRIVATE
+    InternalCollectionsUtilities)
+  set_target_properties(HeapModule PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
+
+  _install_target(HeapModule)
+  set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HeapModule)
+endif()
