Eliminate relative paths from the cmake single-module build

--- a/Sources/Collections/CMakeLists.txt
+++ b/Sources/Collections/CMakeLists.txt
@@ -16,18 +16,20 @@ if(COLLECTIONS_SINGLE_MODULE)
     set(COLLECTIONS_MODULE_TYPE)
   endif()
 
+  set_property(GLOBAL PROPERTY COLLECTIONS_MODULE_NAME ${COLLECTIONS_MODULE_NAME})
+
   get_property(COLLECTIONS_UTILITIES_SOURCES GLOBAL PROPERTY COLLECTIONS_UTILITIES_SOURCES)
-  list(TRANSFORM COLLECTIONS_UTILITIES_SOURCES PREPEND "../InternalCollectionsUtilities/")
+  list(TRANSFORM COLLECTIONS_UTILITIES_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/InternalCollectionsUtilities/")
   get_property(COLLECTIONS_BIT_SOURCES GLOBAL PROPERTY COLLECTIONS_BIT_SOURCES)
-  list(TRANSFORM COLLECTIONS_BIT_SOURCES PREPEND "../BitCollections/")
+  list(TRANSFORM COLLECTIONS_BIT_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/BitCollections/")
   get_property(COLLECTIONS_DEQUE_SOURCES GLOBAL PROPERTY COLLECTIONS_DEQUE_SOURCES)
-  list(TRANSFORM COLLECTIONS_DEQUE_SOURCES PREPEND "../DequeModule/")
+  list(TRANSFORM COLLECTIONS_DEQUE_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/DequeModule/")
   get_property(COLLECTIONS_HEAP_SOURCES GLOBAL PROPERTY COLLECTIONS_HEAP_SOURCES)
-  list(TRANSFORM COLLECTIONS_HEAP_SOURCES PREPEND "../HeapModule/")
+  list(TRANSFORM COLLECTIONS_HEAP_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/HeapModule/")
   get_property(COLLECTIONS_ORDERED_SOURCES GLOBAL PROPERTY COLLECTIONS_ORDERED_SOURCES)
-  list(TRANSFORM COLLECTIONS_ORDERED_SOURCES PREPEND "../OrderedCollections/")
+  list(TRANSFORM COLLECTIONS_ORDERED_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/OrderedCollections/")
   get_property(COLLECTIONS_HASHTREE_SOURCES GLOBAL PROPERTY COLLECTIONS_HASHTREE_SOURCES)
-  list(TRANSFORM COLLECTIONS_HASHTREE_SOURCES PREPEND "../HashTreeCollections/")
+  list(TRANSFORM COLLECTIONS_HASHTREE_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/HashTreeCollections/")
 
   add_library(${COLLECTIONS_MODULE_NAME} ${COLLECTIONS_MODULE_TYPE}
     "Collections.swift"
@@ -40,7 +42,7 @@ if(COLLECTIONS_SINGLE_MODULE)
 
   if(COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
     get_property(COLLECTIONS_ROPE_SOURCES GLOBAL PROPERTY COLLECTIONS_ROPE_SOURCES)
-    list(TRANSFORM COLLECTIONS_ROPE_SOURCES PREPEND "../RopeModule/")
+    list(TRANSFORM COLLECTIONS_ROPE_SOURCES PREPEND "${SwiftCollections_SOURCE_DIR}/Sources/RopeModule/")
     target_sources(${COLLECTIONS_MODULE_NAME} PRIVATE
       ${COLLECTIONS_ROPE_SOURCES})
     target_compile_options(${COLLECTIONS_MODULE_NAME} PRIVATE
