--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -7,6 +7,9 @@ Licensed under Apache License v2.0 with Runtime Library Exception
 See https://swift.org/LICENSE.txt for license information
 #]]
 
+# Add Collections first so it can potentially setup the single-module library
+add_subdirectory(Collections)
+
 add_subdirectory(BitCollections)
 add_subdirectory(DequeModule)
 add_subdirectory(HashTreeCollections)
@@ -14,6 +17,3 @@ add_subdirectory(HeapModule)
 add_subdirectory(OrderedCollections)
 add_subdirectory(RopeModule)
 add_subdirectory(InternalCollectionsUtilities)
-
-# Add Collections last so it can find global properties set by sub directories
-add_subdirectory(Collections)
