[CMake] Reduce the size of the _FoundationCollections module

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -55,10 +55,12 @@ else()
   add_subdirectory(Collections)
 endif()
 
-add_subdirectory(BitCollections)
-add_subdirectory(DequeModule)
-add_subdirectory(HashTreeCollections)
-add_subdirectory(HeapModule)
+if(NOT COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
+  add_subdirectory(BitCollections)
+  add_subdirectory(DequeModule)
+  add_subdirectory(HashTreeCollections)
+  add_subdirectory(HeapModule)
+endif()
 add_subdirectory(OrderedCollections)
 add_subdirectory(RopeModule)
 add_subdirectory(InternalCollectionsUtilities)
