[Deque] Stop using ManagedBuffer
Instead, just have a regular class holding a HypoDeque. This requires two allocations per deque, but it makes representation a lot more straightforward.

I do not have a workable solution for empty singletons, though.

--- a/Sources/Future/CMakeLists.txt
+++ b/Sources/Future/CMakeLists.txt
@@ -14,6 +14,9 @@ add_library(Future
   "Inout.swift"
   "RawSpan.swift"
   "Span.swift"
+  "Containers/Container.swift"
+  "Containers/DynoArray.swift"
+  "Containers/HypoArray.swift"
 )
 
 target_link_libraries(Future PRIVATE
