Hypo → Rigid, Dyno → Dynamic
Let’s try these on for size. The greek prefixes work great, but their capitalization looks bad, and they do not interact well with compound names. (`OrderedHyposet`?)

--- a/Sources/DequeModule/CMakeLists.txt
+++ b/Sources/DequeModule/CMakeLists.txt
@@ -35,8 +35,8 @@ target_sources(${module_name} PRIVATE
   "Deque+Testing.swift"
   "Deque._Storage.swift"
   "Deque.swift"
-  "DynoDeque.swift"
-  "HypoDeque.swift"
+  "DynamicDeque.swift"
+  "RigidDeque.swift"
   "_DequeSlot.swift"
   "_UnsafeDequeHandle.swift"
   "_UnsafeWrappedBuffer.swift"
