[Future] Add unsafelyOverrideLifetime(of:to:)

--- a/Sources/Future/CMakeLists.txt
+++ b/Sources/Future/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(Future
   "Cell.swift"
   "ContiguousStorage.swift"
   "Inout.swift"
+  "LifetimeOverride.swift"
   "RawSpan.swift"
   "Span.swift"
   "Containers/Container.swift"
