--- a/Sources/Future/CMakeLists.txt
+++ b/Sources/Future/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(Future
   "LifetimeOverride.swift"
   "RawSpan.swift"
   "Span.swift"
+  "Containers/Bovine.swift"
   "Containers/Container.swift"
   "Containers/DynamicArray.swift"
   "Containers/RigidArray.swift"
