--- a/Sources/Future/CMakeLists.txt
+++ b/Sources/Future/CMakeLists.txt
@@ -12,9 +12,13 @@ add_library(Future
   "Cell.swift"
   "ContiguousStorage.swift"
   "Inout.swift"
+  "OutputSpan.swift"
   "LifetimeOverride.swift"
   "RawSpan.swift"
   "Span.swift"
+  "Span+Iterator.swift"
+  "StdlibOutputSpanExtensions.swift"
+  "StdlibSpanExtensions.swift"
   "Containers/Shared.swift"
   "Containers/Container.swift"
   "Containers/DynamicArray.swift"
