--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,6 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
-      license_header_check_enabled: false
       license_header_check_project_name: "Swift.org"
       # https://github.com/apple/swift-collections/issues/428
       python_lint_check_enabled: false
@@ -20,3 +19,5 @@ jobs:
       docs_check_enabled: false
       # https://github.com/apple/swift-collections/issues/430
       shell_check_enabled: false
+      # https://github.com/apple/swift-collections/issues/431
+      format_check_enabled: false
