[cmake] Install libraries in standard directories
Previously, libs were installed under `lib/swift/${os}`. They should be
installed in the default library directory for the relevant target
system.
In addition, swiftmodules were installed in the older layout format.
This changes to use the standard modern layout format for swiftmodules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ if(COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
 endif()
 
 include(CTest)
+include(GNUInstallDirs)
 include(SwiftSupport)
 
 add_subdirectory(Sources)
